2010-02-26  Gavin Barraclough  <barraclough@apple.com>

        Reviewed by NOBODY (Build fix following r55312).

        * bridge/qt/qt_pixmapruntime.cpp:
        (JSC::Bindings::QtPixmapInstance::invokeMethod):

2010-02-26  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=35450
        Crash when a Java array property accessor raises an exception

        Test: java/inaccessible-class.html

        * bridge/jni/jsc/JNIBridgeJSC.cpp: (JavaField::valueFromInstance): Check if the result
        is null before interpreting it as an object or array.

2010-02-26  Dirk Schulze  <krit@webkit.org>

        Reviewed by Nikolas Zimmermann.

        Extend AffineTransform to mapQuad
        https://bugs.webkit.org/show_bug.cgi?id=35444

        This makes mapQuad available for AffineTransform. So that platforms
        can make use of it after the switch from TransformationMatrix to
        AffineTransform in GraphicsContext.

        * platform/graphics/transforms/AffineTransform.cpp:
        (WebCore::AffineTransform::mapRect): mapRect already did the calculation for mapQuad but gave back the
                                             boundingBox of the resulting FloatQuad.
        (WebCore::AffineTransform::mapQuad):
        * platform/graphics/transforms/AffineTransform.h:

2010-02-26  Brady Eidson  <beidson@apple.com>

        Reviewed by Pavel Feldman.

        Arrow keys do not scroll source view in Resources pane or Scripts pane.
        <rdar://problem/7594367> and https://bugs.webkit.org/show_bug.cgi?id=34356

        Handle vertical scrolling in the Text Viewer:
        * inspector/front-end/TextViewer.js:
        (WebInspector.TextViewer): Listen for the keydown event.
        (WebInspector.TextViewer.prototype._handleKeyDown): If the event has no modifiers and refers
          to an arrow key, scroll. The horizontal values were ripped from the default "pixels per scroll line"