@@ -1,10 +1,10 @@
 #
 # Copyright (C) 2009 Google Inc. All rights reserved.
-# 
+#
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are
 # met:
-# 
+#
 #     * Redistributions of source code must retain the above copyright
 # notice, this list of conditions and the following disclaimer.
 #     * Redistributions in binary form must reproduce the above
@@ -14,7 +14,7 @@
 #     * Neither the name of Google Inc. nor the names of its
 # contributors may be used to endorse or promote products derived from
 # this software without specific prior written permission.
-# 
+#
 # THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 # "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 # LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
@@ -169,7 +169,51 @@
       '../workers',
       '../xml',
     ],
+
+    'bindings_idl_files': [
+      '<@(webcore_bindings_idl_files)',
+    ],
+
+    'bindings_idl_files!': [
+      # Custom bindings in bindings/v8/custom exist for these.
+      '../dom/EventListener.idl',
+      '../dom/EventTarget.idl',
+      '../html/VoidCallback.idl',
+
+      # JSC-only.
+      '../inspector/JavaScriptCallFrame.idl',
+
+      # Bindings with custom Objective-C implementations.
+      '../page/AbstractView.idl',
+
+      # FIXME: I don't know why all of these are excluded.
+      # Extra SVG bindings to exclude.
+      '../svg/ElementTimeControl.idl',
+      '../svg/SVGAnimatedPathData.idl',
+      '../svg/SVGExternalResourcesRequired.idl',
+      '../svg/SVGFilterPrimitiveStandardAttributes.idl',
+      '../svg/SVGFitToViewBox.idl',
+
+      '../svg/SVGHKernElement.idl',
+      '../svg/SVGLangSpace.idl',
+      '../svg/SVGLocatable.idl',
+      '../svg/SVGStylable.idl',
+      '../svg/SVGTests.idl',
+      '../svg/SVGTransformable.idl',
+      '../svg/SVGViewSpec.idl',
+      '../svg/SVGZoomAndPan.idl',
+
+      # FIXME: I don't know why these are excluded, either.
+      # Someone (me?) should figure it out and add appropriate comments.
+      '../css/CSSUnknownRule.idl',
+    ],
+
     'conditions': [
+      ['enable_svg!=0', {
+        'bindings_idl_files': [
+          '<@(webcore_svg_bindings_idl_files)',
+        ],
+      }],
       ['OS=="mac"', {
         'webcore_include_dirs+': [
           # platform/graphics/cg and mac needs to come before
@@ -203,6 +247,23 @@
           '../platform/win',
         ],
       }],
+      ['OS=="win" and buildtype=="Official"', {
+        # On windows official release builds, we try to preserve symbol space.
+        'derived_sources_aggregate_files': [
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSourcesAll.cpp',
+        ],
+      },{
+        'derived_sources_aggregate_files': [
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources1.cpp',
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources2.cpp',
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources3.cpp',
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources4.cpp',
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources5.cpp',
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources6.cpp',
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources7.cpp',
+          '<(SHARED_INTERMEDIATE_DIR)/webkit/bindings/V8DerivedSources8.cpp',
+        ],
+      }]
     ],
   },
   'targets': [
@@ -220,47 +281,8 @@
         '../html/HTMLEntityNames.gperf',
         '../platform/ColorData.gperf',
 
-        # idl rules except for svg (added below)
-        '<@(webcore_bindings_idl_files)',
-      ],
-      'conditions': [
-        ['enable_svg!=0', {
-          'sources': [
-            '<@(webcore_svg_bindings_idl_files)',
-          ],
-        }],
-      ],
-      'sources!': [
-        # Custom bindings in bindings/v8/custom exist for these.
-        '../dom/EventListener.idl',
-        '../dom/EventTarget.idl',
-        '../html/VoidCallback.idl',
-
-        # JSC-only.
-        '../inspector/JavaScriptCallFrame.idl',
-
-        # Bindings with custom Objective-C implementations.
-        '../page/AbstractView.idl',
-
-        # FIXME: I don't know why all of these are excluded.
-        # Extra SVG bindings to exclude.
-        '../svg/ElementTimeControl.idl',
-        '../svg/SVGAnimatedPathData.idl',
-        '../svg/SVGExternalResourcesRequired.idl',
-        '../svg/SVGFitToViewBox.idl',
-        '../svg/SVGHKernElement.idl',
-        '../svg/SVGLangSpace.idl',
-        '../svg/SVGLocatable.idl',
-        '../svg/SVGStylable.idl',
-        '../svg/SVGTests.idl',
-        '../svg/SVGTransformable.idl',
-        '../svg/SVGViewSpec.idl',
-        '../svg/SVGZoomAndPan.idl',
-
-        # FIXME: I don't know why these are excluded, either.
-        # Someone (me?) should figure it out and add appropriate comments.
-        '../css/CSSUnknownRule.idl',
-
+        # idl rules
+        '<@(bindings_idl_files)',
       ],
       'actions': [
         # Actions to build derived sources.
@@ -458,6 +480,28 @@
             '<@(_inputs)'
           ],
         },
+        {
+          'action_name': 'derived_sources_all_in_one',
+          'variables': {
+            # Write sources into a file, so that the action command line won't
+            # exceed OS limites.
+            'idls_list_temp_file': '<|(idls_list_temp_file.tmp <@(bindings_idl_files))',
+          },
+          'inputs': [
+            'scripts/action_derivedsourcesallinone.py',
+            '<!@(cat <(idls_list_temp_file))',
+          ],
+          'outputs': [
+            '<@(derived_sources_aggregate_files)',
+          ],
+          'action': [
+            'python',
+            'scripts/action_derivedsourcesallinone.py',
+            '<(idls_list_temp_file)',
+            '--',
+            '<@(derived_sources_aggregate_files)',
+          ],
+        },
       ],
       'rules': [
         # Rules to build derived sources.
@@ -587,9 +631,9 @@
         ],
       },
       'sources': [
-        # This file includes all the .cpp files generated from the .idl files
+        # These files include all the .cpp files generated from the .idl files
         # in webcore_files.
-        '../bindings/v8/DerivedSourcesAllInOne.cpp',
+        '<@(derived_sources_aggregate_files)',
 
         # Additional .cpp files from webcore_bindings_sources actions.
         '<(SHARED_INTERMEDIATE_DIR)/webkit/HTMLElementFactory.cpp',
@@ -665,7 +709,7 @@
         '<(chromium_src_dir)/third_party/sqlite/sqlite.gyp:sqlite',
       ],
       'defines': [
-        'WEBCORE_NAVIGATOR_VENDOR="Google Inc."', 
+        'WEBCORE_NAVIGATOR_VENDOR="Google Inc."',
       ],
       'include_dirs': [
         '<(INTERMEDIATE_DIR)',
