@@ -1,3 +1,14 @@
+2010-02-26  Yaar Schnitman  <yaar@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        [V8] Auto-generate and split DerivedSourcesAllInOne.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=33048
+
+        * WebCore.gyp/WebCore.gyp:
+        * WebCore.gyp/scripts/action_derivedsourcesallinone.py: Added.
+        * bindings/v8/DerivedSourcesAllInOne.cpp: Removed.
+
 2010-02-26  Gavin Barraclough  <barraclough@apple.com>
 
         Reviewed by NOBODY (Build fix following r55312).
@@ -100,6 +111,7 @@
         * WebCore.xcodeproj/project.pbxproj:
         * bindings/scripts/CodeGeneratorJS.pm:
 
+>>>>>>> .r55317
 2010-02-26  Alex Milowski  <alex@milowski.com>
 
         Reviewed by Kenneth Rohde Christiansen.
